--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,25 +1,86 @@
-/**
-  |============================
-  | include css partials with
-  | default @import url()
-  |============================
-*/
-@import url('./reset.css');
-@import url('./vite-promo.css');
-@import url('./header.css');
+/* basa */
+*{
+  box-sizing: border-box;
+  padding: 0px;
+  margin: 0px;
+  width: 100%;
+  height: 100%;
+}
+body{
+border: 5px solid black;
+}
+header{
+  display: flex;
+  height: 100%;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  background-image: linear-gradient(90deg, rgba(191, 12, 240, 0.2973783263305322) 0%, rgba(14, 207, 226, 1) 35%, rgba(200, 228, 32, 1) 100%)
+}
+.container{
+  width: 99%;
+  height: 99%;
+  background-color: black;
+  position: relative;
+  
+}
+/* first page */
+.first-page{
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 125px;
+  transition: all 600ms ease-in-out;
 
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
+}
+.first-page-hello{
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  -webkit-box-decoration-break: clone;
+  background-image:linear-gradient(90deg, rgba(200, 228, 32, 1) 0%, rgba(14, 207, 226, 1) 35%, rgba(221, 65, 167, 1) 100%);
+   font-size: 40px;
+    height: auto;
+    width: auto;
+}
+.first-page-title{
+-webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  -webkit-box-decoration-break: clone;
+  background-image: linear-gradient(90deg, rgba(213, 170, 27, 1) 0%, rgba(14, 226, 177, 1) 35%, rgba(221, 65, 210, 1) 100%);
+font-size: 28px;
+height: auto;
+width: 280px;
+}
+.first-page-container-btn{
+  height: 80px;
+  width: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image:linear-gradient(90deg, rgba(191, 12, 240, 0.2973783263305322) 0%, rgba(14, 207, 226, 1) 35%, rgba(200, 228, 32, 1) 100%) ;
+}
+.first-page-btn{
+  width: 75px;
+  height: 75px ;
+  display: block;
+  border: none;
+ background-color: black;
+}
+.first-page-btn > span{
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  -webkit-box-decoration-break: clone;
+  background-image: linear-gradient(90deg, rgba(200, 228, 32, 1) 0%, rgba(14, 207, 226, 1) 35%, rgba(221, 65, 167, 1) 100%);
+font-size: 50px;
 
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+}
+/* active */
+.is-opacity{
+  opacity: 0;
+  transform: scale(10%);
 }
