--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -97,7 +97,7 @@ font-size: 50px;
       -webkit-background-clip: text;
       -webkit-box-decoration-break: clone;
       background-image: linear-gradient(90deg, rgba(213, 170, 27, 1) 0%, rgba(14, 226, 177, 1) 35%, rgba(221, 65, 210, 1) 100%);
-      font-size: 28px;
+      font-size: 24px;
       height: auto;
       width: auto;
       margin-bottom: 40px;
@@ -107,6 +107,7 @@ font-size: 50px;
   width: 80px;
   display: flex;
   justify-content: center;
+  flex-shrink: 0;
   align-items: center;
   background-image: linear-gradient(90deg, rgba(191, 12, 240, 0.2973783263305322) 0%, rgba(14, 207, 226, 1) 35%, rgba(200, 228, 32, 1) 100%);
 }
